unpackaged/main/default/objects/ExplanationNoteCreatedEvent__e/ExplanationNoteCreatedEvent__e.object-meta.xml
<CustomObject>
    <label>Explanation Note Created Event</label>
    <pluralLabel>Explanation Note Created Events</pluralLabel>
</CustomObject>