unpackaged/main/default/objects/ExplanationNoteCreatedEvent__e/fields/AbsenceClaimId__c.field-meta.xml
<CustomField>
    <fullName>AbsenceClaimId__c</fullName>
    <label>Absence Claim Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>