unpackaged/main/default/objects/ExplanationNoteCreatedEvent__e/fields/DisabilityClaimId__c.field-meta.xml
<CustomField>
    <fullName>DisabilityClaimId__c</fullName>
    <label>Disability Claim Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>