unpackaged/main/default/objects/ExplanationNoteCreatedEvent__e/fields/HasDisabilityClaim__c.field-meta.xml
<CustomField>
    <fullName>HasDisabilityClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Disability Claim</label>
    <type>Checkbox</type>
</CustomField>